# ScreenAreaOCR-TTS

./: .gitignore  README.md  config_utils.py  main.py  ocr_infer.py  ocr_server.py  screenshot_utils.py  setup.py  start.ps1  transparent_window.py
reqwest_wrapper/: Cargo.toml  pyproject.toml  reqwest_wrapper.pyi
reqwest_wrapper/src/: lib.rs
