[package]
name = "reqwest_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reqwest_wrapper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
reqwest = {version = "0.11.23", features = ["blocking"]}
